@@ -1,2 +1,2 @@
 #!/bin/sh
-./src/test-runner autologin-guest
+./src/test-runner autologin-guest test-gobject-greeter
