@@ -6,8 +6,9 @@ Overview of changes in lightdm 1.1.0
     * Removed the --passwd-file option as not required for testing anymore
     * Rename test-xserver to X and remove --xserver-command option
     * Make a test session wrapper and remove --session-wrapper option
-    * Remove unused --user-session, --minimum-vt, --minimum-display-number
-      options
+    * Remove unused --user-session, --greeter-session, --minimum-vt,
+      --minimum-display-number options
+    * Use 'default' as the default greeter (make a symlink)
 
 Overview of changes in lightdm 1.0.0
 
